fixed horizontal scrolling

--- a/app/components/TryChatting/TryChatting.module.css
+++ b/app/components/TryChatting/TryChatting.module.css
@@ -5,8 +5,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 72px 0px 40px;
-  margin: 200px 0 0 160px;
+  padding: 0px 72px 0px 200px;
+  margin-top: 200px;
   flex-direction: row-reverse;
 }
 
@@ -80,7 +80,7 @@
 .imageContainer {
   width: 360px;
   height: 360px;
-  margin-right: 360px;
+  margin-right: 180px;
   margin-top: 150px;
   overflow: hidden;
   border-radius: 50%;
